# storage/api-docs/api-docs.json
@@ -20,6 +20,98 @@
                 }
             }
         },
+        "/api/v1/invoices": {
+            "get": {
+                "tags": [
+                    "Invoices"
+                ],
+                "description": "Liste des devis",
+                "operationId": "45e4936c6f9fcc032929d3ef16b36511",
+                "responses": {
+                    "200": {
+                        "description": "Success"
+                    }
+                }
+            }
+        },
+        "/api/v1/get_month_invoices": {
+            "post": {
+                "tags": [
+                    "Invoices"
+                ],
+                "description": "Récupérer les factures du mois",
+                "operationId": "fd02603120789e695269d40a33d52ad0",
+                "requestBody": {
+                    "required": true,
+                    "content": {
+                        "multipart/form-data": {
+                            "schema": {
+                                "required": [
+                                    "month",
+                                    "year"
+                                ],
+                                "properties": {
+                                    "month": {
+                                        "type": "integer"
+                                    },
+                                    "year": {
+                                        "type": "integer"
+                                    }
+                                },
+                                "type": "object"
+                            }
+                        }
+                    }
+                },
+                "responses": {
+                    "200": {
+                        "description": "Utilisateurs récupérés avec succès"
+                    },
+                    "401": {
+                        "description": "Unauthorized"
+                    }
+                }
+            }
+        },
+        "/api/v1/get_month_spents": {
+            "post": {
+                "tags": [
+                    "Invoices"
+                ],
+                "description": "Récupérer les factures du mois",
+                "operationId": "3786fc0dce3f07ae576f651d6da03bb1",
+                "requestBody": {
+                    "required": true,
+                    "content": {
+                        "multipart/form-data": {
+                            "schema": {
+                                "required": [
+                                    "month",
+                                    "year"
+                                ],
+                                "properties": {
+                                    "month": {
+                                        "type": "integer"
+                                    },
+                                    "year": {
+                                        "type": "integer"
+                                    }
+                                },
+                                "type": "object"
+                            }
+                        }
+                    }
+                },
+                "responses": {
+                    "200": {
+                        "description": "Utilisateurs récupérés avec succès"
+                    },
+                    "401": {
+                        "description": "Unauthorized"
+                    }
+                }
+            }
+        },
         "/api/v1/items": {
             "get": {
                 "tags": [
@@ -84,6 +176,10 @@
         {
             "name": "Marques",
             "description": "Marques"
+        },
+        {
+            "name": "Invoices",
+            "description": "Invoices"
         },
         {
             "name": "Articles",
